# src/routes/index.js
@@ -8,12 +8,14 @@ router.use('/utility', require('./utility.routes'))
 router.use('/prompts', require('./prompt.routes'));
 router.use('/favorites', require('./favorite.routes'));
 router.use('/contacts', require('./contact.routes'));
+router.use('/faqs', require('./faq.routes'));
 
 // 後台 router
 router.use('/admin/parameters', require('./admin/parameter.routes'))
 router.use('/admin/users', require('./admin/user.routes'))
 router.use('/admin/skills', require('./admin/skill.routes'))
 router.use('/admin/contacts', require('./admin/contact.routes'))
+router.use('/admin/faqs', require('./admin/faq.routes'))
 
 module.exports = router;
 
